<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_p_s_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:minHeight="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_p_s_desired_date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_desired_date1"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />

        <TextView
            android:id="@+id/text_p_s_total_count"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_total"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />

        <TextView
            android:id="@+id/text_p_s_done_count"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_done"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />

        <TextView
            android:id="@+id/text_p_s_pickup_percent"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_percent"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />

        <TextView
            android:id="@+id/text_p_s_avg_date"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_avg_date"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_f6f6f6" />
</LinearLayout>