<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_d_s_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:minHeight="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_d_s_dpc3_out_date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_dpc3_out_date"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />

        <TextView
            android:id="@+id/text_d_s_total_count"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_total"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />

        <TextView
            android:id="@+id/text_d_s_delivered_count"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_delivered"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />

        <TextView
            android:id="@+id/text_d_s_delivered_percent"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_percent"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />

        <TextView
            android:id="@+id/text_d_s_avg_date"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_avg_date"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_28px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_f6f6f6" />
</LinearLayout>