<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_background_card_view_bottom"
    android:paddingBottom="15dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp">

    <LinearLayout
        android:id="@+id/layout_list_item_child_done_pickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_list_item_child_done_add_scan"
            android:layout_width="93dp"
            android:layout_height="32dp"
            android:background="@drawable/custom_button_list"
            android:text="@string/button_add_scan"
            android:textAllCaps="false"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_26px" />

        <Button
            android:id="@+id/btn_list_item_child_done_take_back"
            android:layout_width="93dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/custom_button_list"
            android:text="@string/button_take_back"
            android:textAllCaps="false"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_26px" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_list_item_child_done_print_label"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:background="@drawable/custom_button_list"
        android:text="@string/button_print_label"
        android:textAllCaps="false"
        android:textColor="@color/color_303030"
        android:textSize="@dimen/text_size_26px" />
</RelativeLayout>